kustomize/overlays/uat/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biodiversityaudit-deployment
spec:
  template:
    spec:
      tolerations:
        - effect: NoSchedule
          key: kubernetes.azure.com/scalesetpriority
          operator: Equal
          value: spot
