kustomize/overlays/uat/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: biodiversityaudit-clusterip
spec:
  type: ClusterIP
  selector:
    app: biodiversityaudit-deployment
    variant: uat
